# StudentGradeManagementSystem

./: .gitignore  CMakeLists.txt  GradeManager.h  README.md  Student.h  main.cpp
docs/: checkpoint2_reflection.md  checkpoint2_tests.md  final_reflection.md  implementation_plan.md
docs/docs/: checkpoint1_tests.md  final_reflection.md
include/: GradeManager.h  Student.h
src/: GradeManager.cpp  main.cpp  student.cpp
tests/: test_add_student.cpp  test_record_grade.cpp  test_search.cpp
